# bight

./: .gitignore  Cargo.toml  Makefile
bight/: Cargo.toml
bight/benches/: evaluator.rs
bight/benchmark_results/: README.txt
bight/benchmark_results/0.1.10-a/: multi-thread.json  multi-thread.txt  single-thread.json  single-thread.txt
bight/benchmark_results/0.1.8-b/: multi-thread.json  multi-thread.txt  single-thread.txt
bight/benchmark_results/0.1.9-a/: multi-thread.txt
bight/benchmark_results_laptop/: 0.1.8-b-single-thread.json  0.1.8-b-single-thread.txt  0.1.9-a-multi-thread.json  0.1.9-a-single-thread.json  0.1.9-a-single-thread.txt
bight/src/: clipboard.rs  csv.rs  evaluator.rs  file.rs  key.rs  lib.rs  main.rs  plot.rs  pool.rs  prelude.lua  sync.rs  table.rs  test_util.rs
bight/src/editor/bindings/: vim_default.rs
bight/src/evaluator/: interaction.rs  lua.rs
bight/src/file/: bight.rs  csv.rs
bight/src/file/bight/: v1.rs
bight/src/table/: cell.rs  data_table.rs  reference.rs  slice.rs
bight/src/table/cell/: lua.rs
bight/src/table/slice/: col.rs  lua.rs  row.rs  table.rs
bight/src/table/slice/table/: iter.rs
bight/src/term/: view.rs
bight/tests/: evaluator.rs
bight_lsp/: Cargo.toml
bight_lsp/src/: main.rs
bight_tui/: Cargo.toml
bight_tui/src/: app.rs  callback.rs  editor.rs  lib.rs  main.rs  term.rs
bight_tui/src/editor/: bindings.rs  mode.rs
bight_tui/src/editor/bindings/: vim_default.rs
bight_tui/src/key/: sequence.rs
bight_tui/src/term/: view.rs
