[package]
name = "bight"
version = "0.1.5-b"
edition = "2024"
authors = [
  "WASDetchan",
]
license = "MIT"
description = "A spreadsheed engine and editor"
repository = "https://github.com/WASDetchan/bight"

[dependencies]
thiserror = "2.0"
tokio = {version = "1.48", features = ["full"]}
futures = "0.3"
mlua = { version = "0.11.5", features = ["async", "luajit", "send"] }
log = "0.4.28"
arboard = {version = "3.6", features = ["wayland-data-control"]}
hashbrown = "0.15.5"
rkyv = { version = "0.8.12", features = ["bytecheck", "hashbrown-0_15"] }
csv = "1.4.0"
plotters = "0.3.7"
polyfit = "0.10.0"
ryu = "1.0.23"
bon = "3.8.1"

[dev-dependencies]
tempfile = "3.24.0"
