[package]
name = "bight"
version = "0.1.10-a"
edition = "2024"
authors = [
  "WASDetchan",
]
license = "MIT"
description = "A spreadsheed engine and editor"
repository = "https://github.com/WASDetchan/bight"

[features]
multi-thread = ["tokio/rt-multi-thread", "mlua/send", "sync"]
sync = ["mlua/error-send"]
system-clipboard = ["dep:arboard"]
plot = ["dep:plotters", "dep:polyfit", "dep:ryu"]

[dependencies]
log = "0.4.29"
thiserror = "2.0"
tokio = {version = "1.50", features = ["rt", "sync"]}
futures = "0.3"
mlua = { version = "0.11.6", features = ["async", "luajit"] }
arboard = {version = "3.6", features = ["wayland-data-control"], optional = true}
hashbrown = "0.15.5"
rkyv = { version = "0.8.12", features = ["bytecheck", "hashbrown-0_15"] }
csv = "1.4.0"
bon = "3.8.1"

ryu = { version = "1.0.23", optional = true }
plotters = { version = "0.3.7", optional = true }
polyfit = { version = "0.10", optional = true }

[dev-dependencies]
tempfile = "3.24.0"
