[package]
name = "bight_lsp"
version = "0.1.0"
edition = "2024"
authors = [
  "WASDetchan",
]
license = "MIT"
description = "A Language Server for bight's cell format"
repository = "https://github.com/WASDetchan/bight"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.97"
crossbeam = "0.8"
log = "0.4"
serde_json = "1.0"
env_logger = "0.11"
