[package]
name = "bight_tui"
version = "0.1.10-a"
edition = "2024"
authors = [
  "WASDetchan",
]
license = "MIT"
description = "A TUI bight frontend"
repository = "https://github.com/WASDetchan/bight"

[dependencies]
bight = {version = "0.1.10-a", path = "../bight", features = ["multi-thread", "system-clipboard"]}

thiserror = "2.0"
crossterm = {version ="0.29", features = ["event-stream"]}
edit = "0.1.5"
mlua = { version = "0.11.5", features = ["async", "luajit", "send"] }
log = "0.4.28"
env_logger = "0.11.8"

[dev-dependencies]
tempfile = "3.24.0"
